samples/_failures_safe/1761656478_0fd382_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_747a4856.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_747a4856.c:131:16: error: expected expression at end of input
  131 |                i, ctx->blocks[i].block_id, ctx->blocks[i].offset,
      |                ^
./samples/SAFE/__tmp_747a4856.c:131:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_747a4856.c:131:16: error: expected declaration or statement at end of input
